# ansible-3xui

./: README.md  ansible.cfg  pyproject.toml
inventories/: 3xui.yaml  hosts.yaml
playbooks/: main.yaml
playbooks/files/: README.md
roles/certificate_url/defaults/: main.yml
roles/certificate_url/handlers/: main.yml
roles/certificate_url/tasks/: main.yml
roles/certificate_url/tests/: test.yml
roles/certificate_url/vars/: main.yml
roles/import_db/defaults/: main.yml
roles/import_db/handlers/: main.yml
roles/import_db/tasks/: main.yml
roles/import_db/tests/: test.yml
roles/import_db/vars/: main.yml
roles/install_panel/defaults/: main.yml
roles/install_panel/handlers/: main.yml
roles/install_panel/tasks/: main.yml
roles/install_panel/tests/: test.yml
roles/install_panel/vars/: main.yml
roles/restart_panel/defaults/: main.yml
roles/restart_panel/handlers/: main.yml
roles/restart_panel/tasks/: main.yml
roles/restart_panel/tests/: test.yml
roles/restart_panel/vars/: main.yml
roles/update_geo/defaults/: main.yml
roles/update_geo/handlers/: main.yml
roles/update_geo/tasks/: main.yml
roles/update_geo/tests/: test.yml
roles/update_geo/vars/: main.yml
