[project]
name = "auto-config"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "amirshabanics", email = "amirshabanics@gmail.com" }
]
dependencies = [
    "ansible>=11.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ansible-dev-tools>=24.11.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/auto_config"]
